# vocab-master

./: .gitignore  README.md  package-lock.json  package.json  tauri.conf.json
.github/workflows/: build.yml
data/words/: cet4.json  cet6.json  high.json  junior.json
frontend/: index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js  router.js
frontend/src/assets/styles/: main.css
frontend/src/components/: Settings.vue  WordCard.vue
frontend/src/pages/: DashboardPage.vue  QuizPage.vue  ReviewPage.vue  WordsPage.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
