[package]
name = "vocab-master"
version = "1.0.0"
edition = "2021"
description = "Vocab Master - 英语词汇大师"

[lib]
name = "vocab_master"
crate-type = ["cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
toml = "0.8"
urlencoding = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
scraper = "0.19"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

[build-dependencies]
tauri-build = { version = "2" }
